tree-sitter-lox/test/corpus/expressions.txt
================================================================================
Literal Expression
================================================================================

1;
1.0;
"one";
true;
false;
nil;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (number))
  (expression_statement
    (number))
  (expression_statement
    (string
      (string_content)))
  (expression_statement
    (boolean))
  (expression_statement
    (boolean))
  (expression_statement
    (nil)))

================================================================================
Literal Expression - Multiline String
================================================================================

"1
2
3";

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (string
      (string_content))))

================================================================================
Literal Expression - Escape Sequence
================================================================================

"\n";
"a\n";
"\na";
"a\nb";
"a\nb\nc";
"\n\n";
"a\x0Ab\x0bc";
"\x";
"\x0";
"a\\b\\c";

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (string_content)
      (escape_sequence)))
  (expression_statement
    (string
      (escape_sequence)
      (string_content)))
  (expression_statement
    (string
      (string_content)
      (escape_sequence)
      (string_content)))
  (expression_statement
    (string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)))
  (expression_statement
    (string
      (escape_sequence)
      (escape_sequence)))
  (expression_statement
    (string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content)))
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (escape_sequence)))
  (expression_statement
    (string
      (string_content)
      (escape_sequence)
      (string_content)
      (escape_sequence)
      (string_content))))

================================================================================
List Expression
================================================================================

[];
[1];
[1, 2];
[1, 2, 3];

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (list_expression))
  (expression_statement
    (list_expression
      (number)))
  (expression_statement
    (list_expression
      (number)
      (number)))
  (expression_statement
    (list_expression
      (number)
      (number)
      (number))))

================================================================================
Function Expression
================================================================================

fun(x, y) {
  return x + y;
};

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (function_expression
      parameters: (parameter_list
        (identifier)
        (identifier))
      body: (block
        (return_statement
          (binary_expression
            left: (identifier)
            right: (identifier)))))))

================================================================================
Group Expression
================================================================================

(1);

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (group_expression
      expression: (number))))

================================================================================
Identifier Expression
================================================================================

foo;
Bar_1;
_;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (identifier))
  (expression_statement
    (identifier))
  (expression_statement
    (identifier)))

================================================================================
Call Expression - No Arguments
================================================================================

foo();

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      callee: (identifier)
      arguments: (argument_list))))

================================================================================
Call Expression - One Argument
================================================================================

foo(1);

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      callee: (identifier)
      arguments: (argument_list
        (number)))))

================================================================================
Call Expression - Two Arguments
================================================================================

foo(1, 2);

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      callee: (identifier)
      arguments: (argument_list
        (number)
        (number)))))

================================================================================
Call Expression - Repeated Calls
================================================================================

d(1, 2)(3, 4);

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (call_expression
      callee: (call_expression
        callee: (identifier)
        arguments: (argument_list
          (number)
          (number)))
      arguments: (argument_list
        (number)
        (number)))))

================================================================================
Index Expression - Literal
================================================================================

foo[1];

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (index_expression
      subject: (identifier)
      index: (number))))

================================================================================
Index Expression - Identifier
================================================================================

foo[bar];

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (index_expression
      subject: (identifier)
      index: (identifier))))

================================================================================
Index Expression - Repeated
================================================================================

foo[1][2];

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (index_expression
      subject: (index_expression
        subject: (identifier)
        index: (number))
      index: (number))))

================================================================================
Index Expression - Assignment
================================================================================

foo[1] = 2;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (index_expression
        subject: (identifier)
        index: (number))
      right: (number))))

================================================================================
Property Expression - Identifier
================================================================================

foo.bar;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (property_expression
      object: (identifier)
      name: (identifier))))

================================================================================
Property Expression - Repeated Identifiers
================================================================================

foo.bar.baz;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (property_expression
      object: (property_expression
        object: (identifier)
        name: (identifier))
      name: (identifier))))

================================================================================
Property Expression - Call
================================================================================

foo().bar;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (property_expression
      object: (call_expression
        callee: (identifier)
        arguments: (argument_list))
      name: (identifier))))

================================================================================
Property Expression - Assignment
================================================================================

foo.bar = 2;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (property_expression
        object: (identifier)
        name: (identifier))
      right: (number))))

================================================================================
Unary Expression
================================================================================

!1;
-1;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (unary_expression
      right: (number)))
  (expression_statement
    (unary_expression
      right: (number))))

================================================================================
Unary Expression - Right Associativity
================================================================================

!!1;
--1;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (unary_expression
      right: (unary_expression
        right: (number))))
  (expression_statement
    (unary_expression
      right: (unary_expression
        right: (number)))))

================================================================================
Binary Expression
================================================================================

1, 2;
1 or 2;
1 and 2;
1 == 2;
1 != 2;
1 < 2;
1 <= 2;
1 > 2;
1 >= 2;
1 + 2;
1 - 2;
1 * 2;
1 / 2;
1 % 2;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number)))
  (expression_statement
    (binary_expression
      left: (number)
      right: (number))))

================================================================================
Binary Expression - Left Associativity
================================================================================

1, 2, 3;
1 or 2 or 3;
1 and 2 and 3;
1 == 2 == 3;
1 != 2 != 3;
1 < 2 < 3;
1 <= 2 <= 3;
1 > 2 > 3;
1 >= 2 >= 3;
1 + 2 + 3;
1 - 2 - 3;
1 * 2 * 3;
1 / 2 / 3;
1 % 2 % 3;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number)))
  (expression_statement
    (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (number))))

================================================================================
Ternary Expression
================================================================================

1 ? 2 : 3;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (ternary_expression
      condition: (number)
      then: (number)
      else: (number))))

================================================================================
Ternary Expression - Right Associativity
================================================================================

1 ? 2 : 3 ? 4 : 5;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (ternary_expression
      condition: (number)
      then: (number)
      else: (ternary_expression
        condition: (number)
        then: (number)
        else: (number)))))

================================================================================
Assignment Expression
================================================================================

a = 1;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (number))))

================================================================================
Assignment Expression - Instance Field
================================================================================

a.b = 1;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (property_expression
        object: (identifier)
        name: (identifier))
      right: (number))))

================================================================================
Assignment Expression - Right Associativity
================================================================================

a = b = 1;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (assignment_expression
      left: (identifier)
      right: (assignment_expression
        left: (identifier)
        right: (number)))))

================================================================================
Precedence
================================================================================

1, a = 1 ? 1 : 1 or 1 and 1 == 1 < 1 + 1 * -1().a;

--------------------------------------------------------------------------------

(source_file
  (expression_statement
    (binary_expression
      left: (number)
      right: (assignment_expression
        left: (identifier)
        right: (ternary_expression
          condition: (number)
          then: (number)
          else: (binary_expression
            left: (number)
            right: (binary_expression
              left: (number)
              right: (binary_expression
                left: (number)
                right: (binary_expression
                  left: (number)
                  right: (binary_expression
                    left: (number)
                    right: (binary_expression
                      left: (number)
                      right: (unary_expression
                        right: (property_expression
                          object: (call_expression
                            callee: (number)
                            arguments: (argument_list))
                          name: (identifier))))))))))))))
